--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "nodemon --exec babel-node -- src/bin/api.js",
     "build": "rimraf dist && ./node_modules/.bin/babel src -d dist --copy-files",
     "lint": "eslint './src/**/?(*).js?(x)' --fix",
+    "seed": "sequelize db:seed:all",
     "migrate:undo": "node_modules/.bin/sequelize db:migrate:undo:all",
     "db:migrate": "node_modules/.bin/sequelize db:migrate",
-    "db:reset": "npm run migrate:undo && npm run db:migrate"
+    "db:reset": "npm run migrate:undo && npm run db:migrate && npm run seed"
   },
   "repository": "https://gitlab.com/emmsdan/blog.git",
   "author": "Emmanuel Daniel <ecomje@gmail.com>",
@@ -44,6 +45,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql2": "^2.1.0",
     "nodemailer": "^6.4.2",
     "nodemailer-mock": "^1.4.4",
     "nodemailer-sendgrid-transport": "^0.2.0",
